# kinesis-configurator

./: Cargo.toml  README.md
src/: app.rs  constants.rs  lib.rs  main.rs
src/components/: keyboard_view.rs  mod.rs  remap_dialog.rs
src/config/: generator.rs  mod.rs  parser.rs
src/models/: kinesis_layout.rs  kinesis_layout_test.rs  mod.rs
src/ui/: keyboard_view.rs  main_window.rs  mod.rs
src/vdrive/: mod.rs
