[package]
name = "kinesis-configurator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
cairo-rs = "0.21.2"
gtk4 = "0.10.1"
libadwaita = "0.8.0"
librsvg = "2.61.1"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"

[dependencies.relm4]
version = "0.10"
features = ["libadwaita"]
